--- a/style_grid.css
+++ b/style_grid.css
@@ -665,11 +665,14 @@ iframe{
 
 .main-about-us{
     
+    position: relative;
     display: flex;
     flex-direction: row;
-    position: relative;
     align-items: center;
-    height: 50%;
+    padding: auto;
+    height: 60%;
+    padding-top: 15%;
+    
     
 }
     
@@ -741,7 +744,8 @@ iframe{
     flex-direction: column;
     padding: 50px;
     position: relative;
-    margin-top: 100px;
+    margin-top: 10px;
+   
     
     
 }
@@ -752,10 +756,15 @@ iframe{
 
 .team p{
     padding-bottom: 20px;
+    text-align: center;
+    width: 80%;
 }
 
 .team img{
     display: flex;
+    width: 70%;
+   
+
     
 }
 
@@ -770,6 +779,8 @@ iframe{
     position: relative;
     margin-top: 100px;
     
+    
+    
 
 }
 
@@ -779,10 +790,14 @@ iframe{
    
 .customer p{
     padding-bottom: 20px;
+    text-align: center;
+    width: 80%;
 }
  
 .customer img{
     display: flex;
+    width: 100%;
+    
 }   
 
 .cybersecurity{
@@ -795,18 +810,33 @@ iframe{
     margin-top: 100px;
     
 }
+    
+    
 
 .cybersecurity h2{
-    padding-bottom: 20px;
+    display: inline;
+    text-align: center;
+    
+    
+    
 }
 
-.cybersecurity p{
-    padding-bottom: 20px;
-}
-
-.cybersecurity img{
+.cybersecurity-content{
+    
     display: flex;
-} 
+    flex-direction: row;
+    align-items: center;
+}
+
+ .cybersecurity p {
+    width: 50%;
+    text-align: left;
+    padding-left: 8%;
+    padding-right: 8%;
+}
+
+
+
 
 
 /*METRICAS */
@@ -814,56 +844,61 @@ iframe{
 .metrics{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size: larger;
-    margin-top: 50px;
+    justify-content: space-evenly;
     position: relative;
+    margin-top: 70px;
+    flex-wrap: wrap;
 }
+
+.metrics p{
+    text-align: center;
+}  
 
     
 
 .metric-1{
-    box-sizing: border-box;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    
-    border-style: solid;
-    border-color: black;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
+    padding: 5px;
+    width: 20%;
+    border-radius: 3%;
 }
 
 .metric-2{
-    box-sizing: border-box;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    
-    border-style: solid;
-    border-color: black;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
+    padding: 5px;
+    width: 20%;
+    border-radius: 3%;
 }
 
 
 .metric-3{
-    box-sizing: border-box;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    
-    border-style: solid;
-    border-color: black;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
+    padding: 5px;
+    width: 20%;
+    border-radius: 3%;
 }
 
 .metric-4{
-    box-sizing: border-box;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    
-    border-style: solid;
-    border-color: black;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
+    padding: 5px;
+    width: 20%;
+    border-radius: 3%;
 }
 
 /*PAGINA -TARJETA */
@@ -1304,7 +1339,7 @@ legend{
        align-items: center;
    }
 
-   /*RESPONSIVE NOSOTROS - ESTO ES LO QUE QUEDA MAL*/
+   /*RESPONSIVE NOSOTROS*/
   
    .main-about-us{
     display: flex;
@@ -1329,6 +1364,9 @@ legend{
     }
     .main-nosotros-h2{
         margin-top: 30%;
+        width: 80%;
+        text-align: center;
+        margin-left: 10%;
     } 
     .contact__form{
         flex-flow: column wrap;
@@ -1340,6 +1378,42 @@ legend{
         width: 100%;
 
     }
+
+    .metrics {
+        display: flex;
+        flex-flow: column wrap;
+        max-width: 117rem;
+        position: relative;
+        margin-top: 70px;
+        align-items: center;
+        
+        
+    }
+    .metric-1, .metric-2, .metric-3, .metric-4{
+        width: 80%;
+        margin: 10px;
+    }
+
+    .cybersecurity, .cybersecurity-content{
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .cybersecurity-img{
+        width: 80%;
+    }
+
+    .cybersecurity p {
+        width: 50%;
+        text-align: left;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+
+
+
     /* responsive inicia sesion*/
     .register-form{
         margin-top: 30%;
