--- a/style_grid.css
+++ b/style_grid.css
@@ -1111,7 +1111,7 @@ iframe{
 
 /* ============================================== PAGINA EARN ==============================================*/ 
 
-.slide-in-fwd-center {
+/* .slide-in-fwd-center {
 	-webkit-animation: slide-in-fwd-center 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: slide-in-fwd-center 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
@@ -1282,7 +1282,7 @@ iframe{
     border-radius: 3%;
 }
     
-    
+     */
     
 /*PAGINA CONTACTO*/
 
