sass, components, mixing y extend

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,7 @@
 @import './components/variables';
+@import './components/index';
+@import './components/nav';
 @import './components/earn';
+@import './components/nosotros';
+@import './components/contacto';
+@import './components/_footer';
