--- a/sass/components/_earn.scss
+++ b/sass/components/_earn.scss
@@ -1,110 +1,7 @@
 
-.header{
-    background-color: $vini-color;;
-    width: 100%;
-}
-nav{
-    position: fixed;
-    height: 80px;
-    width: 100%;
-    background-color: $vini-color;;
-    z-index: 100000;
-    top: 0;
-}
 
-.enlace{
-    position: absolute;
-    padding: 20px 50px;
-}
 
-.logo{
-    height: 40px;
-}
 
-nav ul{
-    float: right;
-    margin-right: 20px;
-    
-}
-
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-}
-
-nav ul li a{
-    color: #fff;
-    font-size: 18px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-decoration: none;
-}
-
-li a.active, li:hover{
-    background: $primary-color;;
-    transition: .5s;
-}
-
-.checkbtn{
-    font-size: 30px;
-    color: #fff;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
-
-#check{
-    display: none;
-}
-
-@media (max-width: 925px){
-    .enlace{
-        padding-left: 20px;
-    }
-    nav ul li a {
-        font-size: 16px;
-    }   
-}   
-
-@media (max-width: 858px){ 
-    
-  
-    .checkbtn{
-        display: block;
-    }
-    .ul-nav{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: $vini-color;;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    nav ul li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    li a:hover, li.active{
-        background: none;
-        
-    }
-    #check:checked ~ ul{
-        left:0;
-    }
-}
-
-h1{
-    color: $primary-color;
-}
 
 .slide-in-fwd-center {
 	-webkit-animation: slide-in-fwd-center 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -146,73 +43,67 @@ h1{
     justify-content: center;
     padding: 10PX;
     
+        h1{
+            color: $vini-color;
+            
+        }
+        p{
+            font-size: large;
+            text-align: center;
+            margin-top: 20px;
+            width: 50%;
+            border-bottom: 2px solid $vini-color;
+            padding-bottom: 20px;
+        }
+            
+    }
+                
+            
+    
+.earn-image{
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    
+    width: 45%;
 }
 
 .cripto-earn{
+    width: 80%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
+    color: $vini-color;
+    margin: auto;
+}
+   
+ @mixin cryptos {
+    border-radius: 3%;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+    width: 16%;
+    text-align: center;
+    box-shadow: 1px 1px 10px -3px $primary-color;
+    color: $vini-color;
+ }   
     
-    margin-top: 30px;
-    
+
+.crypto_1, .crypto_2, .crypto_3, .crypto_4{
+    @include cryptos()
 }
 
-.crypto_1{
-    border-radius: 3%;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    display: flex;
-    width: 18%;
-    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
+@mixin crypto-hover {
+    transition: 0.5s;
+    transform: scale(1.1);
 }
 
-.crypto_2{
-    border-radius: 3%;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    display: flex;
-    width: 18%;
-    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
-}
-
-.crypto_3{
-    border-radius: 3%;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    display: flex;
-    width: 18%;
-    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
-    
-}
-
-.crypto_4{
-    border-radius: 3%;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    display: flex;
-    width: 18%;
-    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
-}
-
-.crypto_5{
-    border-radius: 3%;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    display: flex;
-    width: 18%;
-    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
+.crypto_1:hover, .crypto_2:hover, .crypto_3:hover, .crypto_4:hover{
+    @include crypto-hover()
 }
 
 .main-container-whyvini{
@@ -222,11 +113,14 @@ h1{
     align-items: center;
     position: relative;
     margin-top: 100px;
-    
+    margin-bottom: 80px;
+    padding: 5%;
+    background-color: $primary-color;
     
 }
 .whyvini-title{
     text-align: center;
+    color: #fff
 }
 .main-whyvini{
     
@@ -238,45 +132,31 @@ h1{
     
 .main-whyvini p {
     text-align: center;
+    color: $vini-color;
 }   
 
-.main-container-whyvini_1{
+@mixin whyvini {
     display: block;
     position: relative;
     box-sizing: border-box;
-    box-shadow: 1px 1px 10px -3px $primary-color;;
     padding: 10px;
     width: 25%;
     border-radius: 3%;
+    color: $vini-color;
+    background-color: #fff;
 }
+    
+.main-container-whyvini_1, .main-container-whyvini_2, .main-container-whyvini_3 {
+    @include whyvini()
+}
+ 
+    
+    
+
+
 .main-container-whyvini_1, .main-container-whyvini_2, .main-container-whyvini_3 {
     text-align: center;
-}  
-    
-    
-
-.main-container-whyvini_2{
-    display: block;
-    position: relative;
-    box-sizing: border-box;
-    box-shadow: 1px 1px 10px -3px $primary-color;;
-    padding: 10px;
-    width: 25%;
-    border-radius: 3%;
-}
-    
-    
-
-.main-container-whyvini_3{
-    display: block;
-    position: relative;
-    box-sizing: border-box;
-    box-shadow: 1px 1px 10px -3px $primary-color;;
-    padding: 10px;
-    width: 25%;
-    border-radius: 3%;
-}
-
+} 
 @media screen and (max-width: 900px) {
     .cripto-earn{
         flex-direction: column;
