--- a/style_grid.css
+++ b/style_grid.css
@@ -4,6 +4,7 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    
 }
 
 
@@ -123,7 +124,7 @@ li a.active, li:hover{
 
   
 .index-main-texto{
-    
+  
     display: flex;
     flex-direction: row;
     position: relative;
@@ -133,12 +134,64 @@ li a.active, li:hover{
 .main__texto{
     position: relative;
     display: flex;
-    align-items: center;
+    color: #fff;
+    
     flex-direction: column;
     margin-top: 20%;
     width: 60%;
     margin-left: 10%;
-}  
+   
+} 
+
+.botones-index{
+    font-display: flex;
+    
+    margin-right: 32%;
+    margin-left: 5%;
+}
+
+.boton{
+    text-decoration: none;
+    color: rgb(184, 14, 101);
+}
+
+.btn1{
+    background-color:#B80E65;
+	border-radius:28px;
+	border:1px solid #B80E65;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #B80E65;
+}
+
+.btn1:hover{
+    
+    color: #ffffff;
+    background-color: rgb(28, 27, 77);
+}
+
+.btn2{
+    
+	border-radius:28px;
+	border:1px solid #B80E65;
+	display:inline-block;
+	cursor:pointer;
+	color: #B80E65;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #B80E65;
+}
+
+.btn2:hover{
+    background-color: #1C1B4D;
+    color: #ffffff;
+}
+    
     
 .fade-in-fwd {
 	-webkit-animation: fade-in-fwd 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -176,7 +229,7 @@ li a.active, li:hover{
 .h1__titulo  {
     display: inline;
     padding: 0px, 0px;
-    margin-left: 7%;
+    margin-left: 5%;
     font-weight: bold;
     position: relative;
     color: #1C1B4D ;
@@ -190,7 +243,7 @@ li a.active, li:hover{
     font-size: medium;
     color: #1C1B4D;
     text-align: left;
-    
+   
     
 }
     
@@ -583,6 +636,8 @@ li a.active, li:hover{
         margin: 10%;
         text-align: center;
         font-weight: bold;
+      
+        
     }  
     
 .load-money-icons {
@@ -704,10 +759,10 @@ iframe{
 
 /* ============================================ PAGINA NOSOTROS ========================================== */
 .main-nosotros{
-   
+    
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    top: 90px
     
     
 }
@@ -760,11 +815,12 @@ iframe{
 
     
 .main-nosotros-h2{
-    margin-top: 10%;
+    margin-top: 5%; 
     text-align: center;
+    background-color: #b80e663c;
+}
     
 
-}
     
 
 
@@ -814,7 +870,8 @@ iframe{
     display: flex;
     flex-wrap: nowrap;
     padding: 10%;
-    width: 60%;
+    width: 70%;
+    margin-right: -7%;
 }
 
 
@@ -1080,10 +1137,23 @@ iframe{
     width: 70%;
     
 }  
-.registrate-boton{
+/* .registrate-boton{
     display: flex;
     flex-direction: column;
     padding: 5%;
+} */
+.btn3{
+    background-color:#B80E65;
+	border-radius:28px;
+	border:1px solid #B80E65;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #B80E65;
+
 }
     .main-registrate h2{
     text-align: left;
@@ -1378,6 +1448,7 @@ legend{
     }
     .main__texto {
         margin-left: 0%;
+        
     }
 
     .imagen_1 {
