--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,34 +1,29 @@
 .index-main-texto{
-    
     display: flex;
     flex-direction: row;
     position: relative;
 }
 
-
 .main__texto{
     position: relative;
     display: flex;
     color: #fff;
-    
+    margin-left: 10%;
     flex-direction: column;
     margin-top: 20%;
     width: 60%;
-    margin-left: 10%;
-   
 } 
-
+    
 .botones-index{
     font-display: flex;
-    
     margin-right: 32%;
     margin-left: 5%;
-}
-
+}  
+    
 .boton{
     text-decoration: none;
     color: rgb(184, 14, 101);
-}
+} 
 
 .btn1{
     background-color:#B80E65;
@@ -44,7 +39,6 @@
 }
 
 .btn1:hover{
-    
     color: #ffffff;
     background-color: rgb(28, 27, 77);
 }
@@ -57,26 +51,12 @@
     background-color: #fff;
     color: #B80E65;
 }
-    
-/* .btn2{
-    
-	border-radius:28px;
-	border:1px solid #B80E65;
-	display:inline-block;
-	cursor:pointer;
-	color: #B80E65;
-	font-size:17px;
-	padding:16px 31px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #B80E65;
-} */
-
+ 
 .btn2:hover{
     background-color: #1C1B4D;
     color: #ffffff;
 }
-    
-    
+
 .fade-in-fwd {
 	-webkit-animation: fade-in-fwd 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	        animation: fade-in-fwd 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -106,18 +86,14 @@
       opacity: 1;
     }
   }
-    
-    
 
-
-.h1__titulo  {
+  .h1__titulo  {
     display: inline;
     padding: 0px, 0px;
     margin-left: 5%;
     font-weight: bold;
     position: relative;
     color: #1C1B4D ;
-    
 }
 
 .main__parrafo { 
@@ -127,25 +103,16 @@
     font-size: medium;
     color: #1C1B4D;
     text-align: left;
-   
-    
 }
-    
- 
    
-    
 .imagen_1 {
     position: relative;
     display: flex;
     flex-wrap: nowrap;
     padding: 10%;
     width: 60%;
-}
-
+}   
     
-    
-
-
 
 /*====================================== INDEX -ICONOS E INFO DE LOS SERVICIOS===========================================*/
 
@@ -186,12 +153,10 @@
               transform: translateZ(0) translateY(0);
       opacity: 1;
     }
-  }
-  
+  }  
 
 
-    
-.icons_1 {
+  .icons_1 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -200,12 +165,12 @@
     padding: 5px;
     width: 25%;
     border-radius: 3%;
-    
-    
 }
+    
 .icons_1 p{
     text-align: center;
 }  
+    
 
 .icons__image{
     width: 30%;
@@ -218,45 +183,76 @@
   
 
 .icons_2 {
-    
-    display: flex;
+   @extend .icons_1
+    /*  display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     box-shadow: 1px 1px 10px -3px #1791b1;
     padding: 5px;
     width: 25%;
-    border-radius: 3%;
-    
+    border-radius: 3%; */
 }
+    
 .icons_2 p{
     text-align: center;
 }
-
+    
 .icons_2:hover{
     transition: 0.5s;
     transform: scale(1.1);
 }
 
 .icons_3{
-    
-    display: flex;
+    @extend .icons_1;
+     /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
     padding: 5px;
     width: 25%;
-    border-radius: 3%;
+    border-radius: 3%;  */
 }
-
+    
 .icons_3 p{
     text-align: center;
 }
 .icons_3:hover{
     transition: 0.5s;
     transform: scale(1.1);
-}
+}   
+    
+    
+
+    
+    
+
+
+
+    
+
+
+    
+ 
+   
+    
+
+
+    
+    
+
+
+
+
+
+  
+
+
+    
+
+
+
 
 
 /* ================================ INDEX -DESCRIPCIÓN DE LA SEGURIDAD DEL SITIO======================================*/
@@ -265,20 +261,21 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    flex-wrap: nowrap;
-    
+    /* flex-wrap: nowrap; */
+    align-items: center;
     width: 80%;
     margin-left: 10%;
     
-    
-    
 }
-    
-    
-    
-    
-   
-    
+
+.security__image {
+    display: flex;
+    margin-left: 5%;
+    position: relative;
+    width: 30%;
+    height: 30%;
+}
+
 .security-title h2{
     font-weight: bold;
     display: flex;
@@ -287,23 +284,56 @@
     margin-bottom: 2%;
     justify-content: center;
     align-items: center;
-    
-    
 }
-
     
-    
-
-
 .security__container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 2fr);
-    column-gap: 20px;
-    row-gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
     width: 80%;
-    margin-right: 10%;
+}   
+    
+.container-1 {
+    width: 80%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
 }
+
+.container-2{
+    @extend .container-1;
+    /* width: 80%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around; */
+}        
+    
+    
+    
+    
+    
+    
+    
+   
+    
+
+
+    
+    
+
+
+   
+
+
+    
+
     
     
     
@@ -321,20 +351,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-color: black;
     border: 10px;
     position: relative;
     margin-top: 15px;
-    
-    
-  
 }
-.icon-security_1 p {
-    text-align: center;
-    
-}
-    
 
+.security-p {
+    color: $vini-color;
+    width: 60%;
+    text-align: center;
+}
 
 .icon-security_2 {
     display: flex;
@@ -345,13 +371,8 @@
     border: 10px;
     position: relative;
     margin-top: 15px;
-}
-
-.icon-security_2 p {
-    text-align: center;
+}   
     
-}
-
 .icon-security_3 {
     display: flex;
     flex-direction: column;
@@ -361,12 +382,7 @@
     border: 10px;
     position: relative;
     margin-top: 15px;
-}
-
-.icon-security_3 p {
-    text-align: center;
-    
-}
+}   
     
 .icon-security_4 {
     display: flex;
@@ -377,131 +393,112 @@
     border: 10px;
     position: relative;
     margin-top: 15px;
-}
+}  
 
-.icon-security_4 p {
-    text-align: center;
+  /* =================================== INDEX-COMO SER CLIENTE DEL BANCO ====================================*/     
     
-}
-
-    
-.security__image {
+  .be-part-main {
     display: flex;
-    margin-left: 5%;
+    flex-direction: column;
+    justify-content: space-evenly;
     position: relative;
-    width: 40%;
-    height: 40%;
+    margin-top: 70px;
+} 
+
+.be-part-icons { 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    position: relative;
+    margin-top: 70px;
+    padding: auto;
     
+} 
+
+.be-part-title{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+    
+.be-part-icon_1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+    border-radius: 3%;
+    padding: 5px;
+    box-shadow: 1px 1px 10px -3px rgba(184, 14, 101, 1);
+   }
+   
+
+.be-part-icon_1 p{
+    text-align: center;
 }
 
+ .be-part-icon_1:hover{
+   transition: 0.5s;
+   transform: scale(1.1);
+   }
+
+.be-part-icon_2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+    border-radius: 3%;
+    box-shadow: 1px 1px 10px -3px rgba(184, 14, 101, 1);
     
-
- /* =================================== INDEX-COMO SER CLIENTE DEL BANCO ====================================*/   
-
- .be-part-main {
-     display: flex;
-     flex-direction: column;
-     justify-content: space-evenly;
-     position: relative;
-     margin-top: 70px;
- }
-
-
-     
- 
- .be-part-icons { 
-     display: flex;
-     flex-direction: row;
-     justify-content: space-evenly;
-     position: relative;
-     margin-top: 70px;
-     padding: auto;
-     
- } 
- 
- .be-part-title{
-     position: relative;
-     display: flex;
-     justify-content: center;
-     text-align: center;
-     
-     
- }
- .be-part-icon_1 {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     width: 20%;
-     border-radius: 3%;
-     padding: 5px;
-     box-shadow: 1px 1px 10px -3px rgba(184, 14, 101, 1);
-    
- }
-
- .be-part-icon_1 p{
-     text-align: center;
- }
-
-  .be-part-icon_1:hover{
-    transition: 0.5s;
-    transform: scale(1.1);
-    }
- 
- .be-part-icon_2 {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     width: 20%;
-     border-radius: 3%;
-     box-shadow: 1px 1px 10px -3px rgba(184, 14, 101, 1);
-     
- }
- .be-part-icon_2 p{
-    text-align: center;
+}
+.be-part-icon_2 p{
+   text-align: center;
 }
 
 .be-part-icon_2:hover{
-    transition: 0.5s;
-    transform: scale(1.1);
-    }
- 
- .be-part-icon_3 {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     border-radius: 3%;
-     width: 20%; 
-     box-shadow: 1px 1px 10px -3px rgba(184, 14, 101, 1);
- }
- .be-part-icon_3 p{
-    text-align: center;
+   transition: 0.5s;
+   transform: scale(1.1);
+   }
+
+.be-part-icon_3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3%;
+    width: 20%; 
+    box-shadow: 1px 1px 10px -3px rgba(184, 14, 101, 1);
+}
+.be-part-icon_3 p{
+   text-align: center;
 }
 
 .be-part-icon_3:hover{
-    transition: 0.5s;
-    transform: scale(1.1);
-    }
- 
- .be-part-icon_4 {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     border-radius: 3%;
-     width: 20%;
-     box-shadow: 1px 1px 10px -3px rgba(184, 14, 101, 1);
- }
- .be-part-icon_4 p{
-    text-align: center;
+   transition: 0.5s;
+   transform: scale(1.1);
+   }
+
+.be-part-icon_4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3%;
+    width: 20%;
+    box-shadow: 1px 1px 10px -3px rgba(184, 14, 101, 1);
+}
+.be-part-icon_4 p{
+   text-align: center;
 }
 
 .be-part-icon_4:hover{
-    transition: 0.5s;
-    transform: scale(1.1);
-    }
+   transition: 0.5s;
+   transform: scale(1.1);
+   }    
+
+
 /* =================================== INDEX-CÓMO INGRESAR DINERO A LA CUENTA ===================================*/
 
 .load-money {
@@ -509,6 +506,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     position: relative;
+    
     }
     
    
@@ -517,7 +515,7 @@
         position: relative;
         display: flex;
         justify-content: center;
-        margin: 10%;
+        margin-top: 5%;
         text-align: center;
         font-weight: bold;
       
@@ -529,7 +527,8 @@
     flex-direction: row;
     justify-content: space-evenly;
     position: relative;
-   
+    margin-bottom: 3%;
+    margin-top: 3%;
 } 
     
     
@@ -565,3 +564,108 @@
     transition: 0.5s;
     transform: scale(1.1);
     }   
+
+
+    @media screen and (max-width: 900px) {
+        /*RESPONSIVE - INDEX*/
+        .index-main-texto {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            
+            align-items: center;
+            justify-content: center;
+            margin-top: 5%;
+        }
+        .main__texto {
+            margin-left: 0%;
+        }
+        .btn2{
+            margin-top: 10px;
+        }   
+    
+        .imagen_1 {
+            position: relative;
+            display: block;
+            width: 100%;
+            padding: 10%;
+        }
+        
+        .icons {
+            display: flex;
+            flex-flow: column wrap;
+            max-width: 117rem;
+            position: relative;
+            margin-top: 70px;
+            align-items: center;
+            
+            
+        }
+        .icons_1, .icons_2, .icons_3{
+            width: 80%;
+            margin: 10px;
+        }
+        
+        .security__image{
+            display: none;
+        }
+    
+        .security-title{
+            text-align: center;
+        }
+
+        .container-1, .container-2{
+            flex-direction: column;
+            align-items: center;
+            
+            width: 120%;
+            margin: auto;
+        }
+    
+        .be-part-icons { 
+            display: flex;
+            flex-flow: column wrap;
+            max-width: 117rem;
+            position: relative;
+            margin-top: 70px;
+            align-items: center;
+            
+        } 
+    
+        .be-part-icon_1, .be-part-icon_2, .be-part-icon_3, .be-part-icon_4 {
+            width: 80%;
+            margin: 10px;
+        }
+        .footer-container{
+            flex-direction: column;
+        }
+        
+       .social-networks, .contact, .iframe{
+           width: 100%;
+    
+       }
+
+    }
+
+
+    
+
+    
+
+
+
+    
+
+
+    
+
+ 
+
+ 
+
+
+     
+ 
+ 
+ 
+
