--- a/sass/main.css
+++ b/sass/main.css
@@ -16,13 +16,13 @@
   display: -ms-flexbox;
   display: flex;
   color: #fff;
+  margin-left: 10%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   margin-top: 20%;
   width: 60%;
-  margin-left: 10%;
 }
 
 .botones-index {
@@ -59,18 +59,6 @@
   color: #B80E65;
 }
 
-/* .btn2{
-    
-	border-radius:28px;
-	border:1px solid #B80E65;
-	display:inline-block;
-	cursor:pointer;
-	color: #B80E65;
-	font-size:17px;
-	padding:16px 31px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #B80E65;
-} */
 .btn2:hover {
   background-color: #1C1B4D;
   color: #ffffff;
@@ -185,7 +173,7 @@
   }
 }
 
-.icons_1 {
+.icons_1, .icons_2, .icons_3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -206,7 +194,7 @@
   border-radius: 3%;
 }
 
-.icons_1 p {
+.icons_1 p, .icons_2 p, .icons_3 p {
   text-align: center;
 }
 
@@ -214,7 +202,7 @@
   width: 30%;
 }
 
-.icons_1:hover {
+.icons_1:hover, .icons_2:hover, .icons_3:hover {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   -webkit-transform: scale(1.1);
@@ -222,24 +210,14 @@
 }
 
 .icons_2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-shadow: 1px 1px 10px -3px #1791b1;
-          box-shadow: 1px 1px 10px -3px #1791b1;
-  padding: 5px;
-  width: 25%;
-  border-radius: 3%;
+  /*  display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 1px 10px -3px #1791b1;
+    padding: 5px;
+    width: 25%;
+    border-radius: 3%; */
 }
 
 .icons_2 p {
@@ -254,24 +232,14 @@
 }
 
 .icons_3 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-shadow: 1px 1px 10px -3px #1791b1;
-          box-shadow: 1px 1px 10px -3px #1791b1;
-  padding: 5px;
-  width: 25%;
-  border-radius: 3%;
+  /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 1px 10px -3px rgba(23, 145, 177, 1);
+    padding: 5px;
+    width: 25%;
+    border-radius: 3%;  */
 }
 
 .icons_3 p {
@@ -295,10 +263,22 @@
       -ms-flex-direction: row;
           flex-direction: row;
   position: relative;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  /* flex-wrap: nowrap; */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 80%;
   margin-left: 10%;
+}
+
+.security__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 5%;
+  position: relative;
+  width: 30%;
+  height: 30%;
 }
 
 .security-title h2 {
@@ -318,17 +298,48 @@
 }
 
 .security__container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  -ms-grid-rows: (2fr)[2];
-      grid-template-rows: repeat(2, 2fr);
-  -webkit-column-gap: 20px;
-          column-gap: 20px;
-  row-gap: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 50%;
   width: 80%;
-  margin-right: 10%;
+}
+
+.container-1, .container-2 {
+  width: 80%;
+  height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: auto;
+}
+
+.container-2 {
+  /* width: 80%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around; */
 }
 
 .icon-security_1 {
@@ -345,13 +356,14 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border-color: black;
   border: 10px;
   position: relative;
   margin-top: 15px;
 }
 
-.icon-security_1 p {
+.security-p {
+  color: #1C1B4D;
+  width: 60%;
   text-align: center;
 }
 
@@ -375,10 +387,6 @@
   margin-top: 15px;
 }
 
-.icon-security_2 p {
-  text-align: center;
-}
-
 .icon-security_3 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -399,10 +407,6 @@
   margin-top: 15px;
 }
 
-.icon-security_3 p {
-  text-align: center;
-}
-
 .icon-security_4 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -421,20 +425,6 @@
   border: 10px;
   position: relative;
   margin-top: 15px;
-}
-
-.icon-security_4 p {
-  text-align: center;
-}
-
-.security__image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 5%;
-  position: relative;
-  width: 40%;
-  height: 40%;
 }
 
 /* =================================== INDEX-COMO SER CLIENTE DEL BANCO ====================================*/
@@ -628,7 +618,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 10%;
+  margin-top: 5%;
   text-align: center;
   font-weight: bold;
 }
@@ -645,6 +635,8 @@
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   position: relative;
+  margin-bottom: 3%;
+  margin-top: 3%;
 }
 
 .load-money-icon_1 {
@@ -701,6 +693,104 @@
   transition: 0.5s;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+}
+
+@media screen and (max-width: 900px) {
+  /*RESPONSIVE - INDEX*/
+  .index-main-texto {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 5%;
+  }
+  .main__texto {
+    margin-left: 0%;
+  }
+  .btn2 {
+    margin-top: 10px;
+  }
+  .imagen_1 {
+    position: relative;
+    display: block;
+    width: 100%;
+    padding: 10%;
+  }
+  .icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    max-width: 117rem;
+    position: relative;
+    margin-top: 70px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .icons_1, .icons_2, .icons_3, .icons_2, .icons_3 {
+    width: 80%;
+    margin: 10px;
+  }
+  .security__image {
+    display: none;
+  }
+  .security-title {
+    text-align: center;
+  }
+  .container-1, .container-2, .container-2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 120%;
+    margin: auto;
+  }
+  .be-part-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    max-width: 117rem;
+    position: relative;
+    margin-top: 70px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .be-part-icon_1, .be-part-icon_2, .be-part-icon_3, .be-part-icon_4 {
+    width: 80%;
+    margin: 10px;
+  }
+  .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .social-networks, .contact, .iframe {
+    width: 100%;
+  }
 }
 
 .header {
