--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -1,4 +1,11 @@
 $vini-color: #1C1B4D;
 $primary-color: #B80E65;
-$secondary-color: #1791b1;
+$color-fuente: #fff;
 
+
+/* ========= FUENTES ========== */
+
+$fuente: 'Lato', sans-serif;
+$titulos: 40px;
+$subtitulos: 28px;
+$parrafos: 16px;
