--- a/sass/components/_contacto.scss
+++ b/sass/components/_contacto.scss
@@ -30,6 +30,10 @@
     font-family: 'Lato', sans-serif;
         h2{
             font-weight: bold;
+            font-size: $subtitulos;
+        }
+        p {
+            font-size: $parrafos;
         }
     
   
@@ -58,11 +62,16 @@ legend{
     height: 60%;
     
     margin-bottom: 10%;
-    background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1)
+    border-radius: 10px;
+    background-color: $color-fuente;
+  box-shadow: 0 0 20px 1px hsla(0, 0%, 0%, 0.1)
     
 } 
+
+legend{
+    font-size: $subtitulos;
+    font-weight: bold;
+}
 #exampleNewsletter{
     margin-left: 25%;
     margin-right: 8px ;
@@ -74,9 +83,9 @@ legend{
     width: 100%;
     height: 50px;
     
-    background-color: #B80E65;
+    background-color: $primary-color;;
    font-family: 'Lato', sans-serif;
-   border-color: #B80E65;
+   border-color: $primary-color;;
    border-style: none;
    border-radius: 3%;
    margin-top: 20px;
@@ -109,19 +118,20 @@ legend{
 .form-label{
     color: $vini-color;
     font-family: 'Lato', sans-serif;
+    font-size: $parrafos;
 }
 
 #button{
-    background-color:#B80E65;
+    background-color:$primary-color;;
 	border-radius:28px;
-	border:1px solid #B80E65;
+	border:1px solid $primary-color;;
 	display:inline-block;
 	cursor:pointer;
-	color:#ffffff;
+	color:$color-fuente;
 	font-size:17px;
 	padding:16px 31px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #B80E65;
+	text-shadow:0px 1px 0px $primary-color;;
     width: 50%;
     margin-left: 25%;
 }
@@ -130,12 +140,24 @@ legend{
     .contact__form{
         flex-wrap: wrap;
         flex-direction: column;
+        justify-content: center;
+        
     }
     .contact__form-text{
-        width: 90%;
-        margin:auto;    }
+        width: 80%;
+        margin:auto;
+        margin-top: 20%;   
+        
+    }
     .fielset{
-        width: 90%;
+        width: 80%;
         margin: auto;
+        margin-bottom: 20%;
+    }
+
+    .form-check-label{
+        font-size: smaller;
+        width: 50%;
+        
     }
 }
