--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,15 +11,15 @@
     justify-content: space-evenly;
 }
     
-.social{
+#social{
     display: flex;
     flex-direction: column;
-    
+    color: $color-fuente;
     height: 300px;
     align-items: center;
         a{
             text-decoration: none;
-            color: white;
+            color: $color-fuente;
             border: 1px solid white;
             width: 40px;
             height: 40px;
@@ -29,7 +29,7 @@
             margin-top: 10px;
                 &:hover{
                     background-color: $primary-color;
-                    color: #fff; 
+                    color: $color-fuente; 
                 }
             
         }
