--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,8 @@
 @import './components/index';
 @import './components/nav';
 @import './components/earn';
+@import './components/tarjeta';
 @import './components/nosotros';
+@import './components/login';
 @import './components/contacto';
 @import './components/_footer';
